--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "kartik-v/yii2-widget-select2": "^2.1",
     "yiisoft/yii2-imagine": "^2.1",
     "kartik-v/yii2-slider": "^1.3",
+    "kartik-v/yii2-widget-datepicker": "^1.4",
     "kartik-v/yii2-helpers": "^1.3"
   },
   "autoload": {
