--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,14 @@
     "onmotion/yii2-widget-upload-crop": ">=0.5",
     "kartik-v/yii2-editable": "^1.7",
     "kartik-v/yii2-widget-datetimepicker": "^1.4",
+    "kartik-v/yii2-widget-datetimepicker": "^1.4",
     "vova07/yii2-imperavi-widget": "^2.0",
     "kartik-v/yii2-widget-select2": "^2.1",
     "yiisoft/yii2-imagine": "^2.1",
     "kartik-v/yii2-slider": "^1.3",
     "kartik-v/yii2-widget-datepicker": "^1.4",
-    "kartik-v/yii2-helpers": "^1.3"
+    "kartik-v/yii2-helpers": "^1.3",
+    "kartik-v/yii2-widget-typeahead": "^1.0"
   },
   "autoload": {
     "psr-4": {
